# task_and_note_manager

./: .gitignore  pyproject.toml
classes/: agenda.py  event.py  task.py  tracker.py
commands/: task.py  tracker.py
services/: sheet_construct.py
